# mctext

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release-fonts.yml  release-npm.yml  release-pypi.yml  release-rust.yml
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
bindings/wasm/: Cargo.toml  README.md  package.json
bindings/wasm/src/: lib.rs
crates/mctext/: Cargo.toml  README.md  build.rs
crates/mctext/src/: color.rs  fonts.rs  json.rs  layout.rs  lib.rs  render.rs  system.rs  text.rs
examples/: Cargo.toml  example.js  example.mjs  example.py  example.rs  example2.js  example2.py  example2.rs
tools/: generate_fonts.py  generate_showcase.py  requirements.txt
