[package]
name = "mctext-wasm"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Minecraft text formatting for JavaScript/WASM"
repository = "https://github.com/hexze/mctext"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["render"]
render = ["mctext/render"]

[dependencies]
mctext = { path = "../../crates/mctext" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
