[package]
name = "mctext-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Minecraft text formatting for JavaScript/WASM"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["modern-fonts"]
render = ["mctext/render"]
modern-fonts = ["mctext/modern-fonts", "render"]
legacy-fonts = ["mctext/legacy-fonts", "render"]
special-fonts = ["mctext/special-fonts", "render"]
all-fonts = ["mctext/all-fonts", "render"]

[dependencies]
mctext = { path = "../../crates/mctext", default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
